# VoxelViewer

./: CMakeLists.txt  README.md  a.out  x.c
src/: chunk.cpp  key_mouse_manager.cpp  load.cpp  main.cpp  physics.cpp  render.cpp  resources.cpp  save.cpp  shader_utils.cpp  superchunk.cpp  vectors.cpp  window_utils.cpp
src/include/: chunk.h  global_vars.h  key_mouse_manager.h  load.h  physics.h  resources.h  save.h  shader_utils.h  superchunk.h  superchunk_size.h  textures.h  vectors.h  window_utils.h
src/shaders/: fragment.glsl
